Cited classe value meanings

--- a/HumanActivityRecognition.Rmd
+++ b/HumanActivityRecognition.Rmd
@@ -5,11 +5,22 @@ date: "19 October 2015"
 output: html_document
 ---
 
-A group of enthusiasts take measurements about themselves doing various exercises using devices such as Jawbone Up, Nike FuelBand and Fitbit.
+Six young health participants were asked to perform one set of 10 repetitions of the Unilateral Dumbbell Biceps Curl in five different fashions: 
 
-The goal of this project is to predict the manner in which they did barbell lifts (i.e. whether correctly or incorrectly). This is the "classe" variable in the training set. Other variables may be used for the prediction.
+* exactly according to the specification (Class A), 
+* throwing the elbows to the front (Class B), 
+* lifting the dumbbell only halfway (Class C), 
+* lowering the dumbbell only halfway (Class D) and 
+* throwing the hips to the front (Class E).
 
-The data for this project come from this source: http://groupware.les.inf.puc-rio.br/har.
+They measured their movements and the data can be found here: 
+http://groupware.les.inf.puc-rio.br/har.
+
+Read more: http://groupware.les.inf.puc-rio.br/har#sbia_paper_section#ixzz3oyROG8S5
+
+The goal of this project is to predict the manner in which they did the exercises, that is, whether correctly (Class A) or incorrectly (Classes B to E). This is the "classe" variable in the training set. 
+
+The other variables may be used for the prediction.
 
 ```{r}
 library(caret)
